--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -73,8 +73,8 @@ html:
 #   thebe                     : false  # Add a thebe button to pages (requires the repository to run on Binder)
 #   colab_url                 : "" # The URL of Google Colab (https://colab.research.google.com)
 
-# repository:
-#   url                       : https://github.com/executablebooks/jupyter-book  # The URL to your book's repository
+repository:
+  url                       : https://github.com/whyjz/ncu-env-data-science-template  # The URL to your book's repository
 #   path_to_book              : ""  # A path to your book's folder, relative to the repository root.
 #   branch                    : master  # Which branch of the repository should be used when creating links
 
